--- a/student-request/package.json
+++ b/student-request/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
